--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.1.3",
-    "@astrojs/image": "^0.15.0",
-    "@astrojs/mdx": "^0.17.0",
-    "@astrojs/sitemap": "^1.0.1",
-    "@astrojs/tailwind": "^3.0.1",
-    "@fontsource/inter": "^4.5.14",
-    "@types/alpinejs": "^3.7.1",
-    "astro": "^2.0.14",
-    "astro-color-scheme": "^1.0.1",
+    "@astrojs/image": "^0.15.1",
+    "@astrojs/mdx": "^0.17.2",
+    "@astrojs/sitemap": "^1.4.0",
+    "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^5.0.2",
+    "@fontsource/inter": "^4.5.15",
+    "@types/alpinejs": "^3.13.2",
+    "astro": "^2.10.15",
+    "astro-color-scheme": "^1.1.2",
     "astro-feather-icons": "^1.0.2",
-    "astro-icon": "^0.8.0",
+    "astro-icon": "^0.8.1",
     "astro-seo": "^0.6.1",
-    "mdast-util-to-string": "^3.1.0",
+    "mdast-util-to-string": "^3.2.0",
     "reading-time": "^1.5.0",
     "rehype-plugin-image-native-lazy-loading": "^1.2.0",
-    "tailwindcss": "^3.2.4"
+    "serverless": "link:astrojs/vercel/serverless",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.10",
     "classnames": "^2.3.2",
     "sharp": "^0.31.3"
   }
